--- a/mds/internal/dossier/en/assets/i18n/dossier/fr.json
+++ b/mds/internal/dossier/en/assets/i18n/dossier/fr.json
@@ -14,15 +14,21 @@
   "fileio.msg.dataTypeError": "fr_Error: the wrong form data was selected for this form.",
   "required": "fr_This field is required",
   "minlength": "fr_Minimum length 10",
+  "minNumber5": "fr_(5 numbers)",
+  "minAlphanumeric5": "fr_(5 characters)",
+  "minAlphanumeric7": "fr_(1 letter and 6 numbers)",
   "error.msg.phone": "fr_Please specify a valid phone number",
   "error.msg.email": "fr_Please specify a valid email address",
   "error.msg.postal": "fr_Please specify a valid postal code.",
   "error.mgs.zip": "fr_Please specify a valid zip code.",
+  "error.mgs.company.id": "fr_Please specify a valid manufacturer company ID.",
+  "error.mgs.contact.id": "fr_Please specify a valid manufacturer contact ID.",
   "error.mgs.dossier.id": "fr_Please specify a valid dossier ID.",
   "device.class": "fr_Device Class",
   "device.name": "fr_Name of device, as it appears on the label",
   "has.qmsc": "fr_Quality Management System Certificate (QMSC) is available",
   "qmsc.registrar": "fr_QMSC registrar",
+  "qmsc.no":"fr_Quality Management System Certificate (QMSC) must be issued by CMDCAS recognized/certified",
   "licence.app.type": "fr_Licence Application Type",
   "add.field": "fr_Additional field for context",
   "commmon.required.bracket": "fr_(required)",
@@ -47,5 +53,6 @@
   "msg.err.file.load": "fr_There was a problem loading the file.",
   "msg.err.file.type": "fr_An invalid file type was selected.",
   "msg.err.form.type": "fr_The wrong form type was selected for this form.",
-  "msg.err.checksum.fail": "fr_The checksum in the file does not match the calculated checksum"
+  "msg.err.checksum.fail": "fr_The checksum in the file does not match the calculated checksum",
+  "error.found.because":"fr_could not be saved because"
 }
