MD forms update - co, do and ai

--- a/mds/applicationInfo/en/assets/i18n/applicationInfo/en.json
+++ b/mds/applicationInfo/en/assets/i18n/applicationInfo/en.json
@@ -36,6 +36,7 @@
   "heading.device.material": "Devices containing Biological Material",
   "heading.material.table": "Biological Material Attribute Table",
   "heading.material": "Biological Material",
+  "heading.material.record": "Biological Material Record",
   "device.name": "Name of Compatible Device",
   "licence.number": "Licence number",
   "material.name": "Name of Material",
@@ -45,8 +46,8 @@
   "tissue.other": "Tissue Type Other Details",
   "derivative": "Derivative",
   "derivative.other": "Derivative Other Details",
-  "din": "DIN",
-  "npn": "NPN",
+  "din": "Drug Identification Number (DIN)",
+  "npn": "Natural Product Number (NPN)",
   "nodinnpn": "No DIN/NPN",
   "combination.products.related": "For combination products, please complete the information listed below with respect to the drug or drug substance. ",
   "drug.name": "Brand/Trade Name of Drug",
@@ -76,7 +77,11 @@
   "minlength": "Minimum length 10",
   "error.mgs.company.id": "Please specify a valid company ID.",
   "error.mgs.dossier.id": "Please specify a valid dossier ID.",
+  "error.mgs.din": "Please specify a valid Drug Identification Number (DIN).",
+  "error.mgs.npn": "Please specify a valid Natural Product Number (NPN).",
+  "error.mgs.licence.number": "Please specify a valid Licence Number.",
   "errorSummary.application-info": "Application Information Form",
+  "error.found.because":"could not be saved because",
   "error.found.plural": "errors were found",
   "error.found.singular": "error was found",
   "appl.status": "Enrolment Status",
@@ -92,5 +97,14 @@
   "msg.err.file.load": "There was a problem loading the file.",
   "msg.err.file.type": "An invalid file type was selected.",
   "msg.err.form.type": "The wrong form type was selected for this form.",
-  "msg.err.checksum.fail": "The checksum in the file does not match the calculated checksum"
+  "msg.err.checksum.fail": "The checksum in the file does not match the calculated checksum",
+  "minNumber8": "(8 numbers)",
+  "minNumber6": "(6 numbers)",
+  "minNumber5": "(5 numbers)",
+  "minAlphanum5": "(5 characters)",
+  "minAlphanum7": "(1 letter and 6 numbers)",
+  "instruction": "instruction",
+  "instruction.help": "Instructions for completing sections on form",
+  "return.instruction": "Return to instruction"
+
 }
