--- a/mds/company/en/assets/i18n/company/en.json
+++ b/mds/company/en/assets/i18n/company/en.json
@@ -24,6 +24,8 @@
   "error.msg.email": "Please specify a valid email address",
   "error.msg.postal": "Please specify a valid postal code.",
   "error.mgs.zip": "Please specify a valid zip code.",
+  "error.mgs.company.id": "Please specify a valid company ID.",
+  "error.mgs.licence.number": "Please specify a valid licence number.",
   "postal.canada": "Postal Code",
   "postal.usa": "Zip Code",
   "heading.company": "Regulatory Company Enrolment",
@@ -46,7 +48,8 @@
   "salut.ms": "Ms.",
   "salut.dr": "Dr.",
   "salut.mrs": "Mrs.",
-  "status": "Status",
+  "status": "Contact Status",
+  "hcStatus": "HC Contact Status",
   "role.primary": "Primary",
   "role.secondary": "Alternate",
   "contact.email": "Email",
@@ -79,7 +82,33 @@
   "date.saved": "Date Last Saved",
   "amend.enrol": "Amend Enrolment",
   "amend.msg": "Edit records to be amended below.",
-  "reason.amend": "Reason for amendment",
+  "amend.reason": "Reason for Amendment",
+  "manuname.change": "Change in manufacturer's name",
+  "manuaddr.change": "Change in manufacturer's address",
+  "facility.change": "Change only to the name and/or address of the manufacturing facility",
+  "other": "Other:",
+  "other.details": "Other Details",
+  "ownership.transferred": "Are any ownership of licenses being transferred?",
+  "admin.changes": "Company Administrative Changes",
+  "manufacturer.name.listed": "The revised manufacturer's name should be listed in the \"company name\" field in address information section above",
+  "manufacturer.address.listed": "The revised manufacturer's address should be listed in the fields in address information section above",
+  "include.attestation": "Please include a signed attestation for manufacturing facility name/address change",
+  "impacted.licence": "Impacted Licence(s)",
+  "all.licence.num": "All licence number",
+  "all.dossier.id": "All dossier ID",
+  "add.licence": "Add Licence",
+  "save.licence": "Save Licence",
+  "delete.licence": "Delete Licence",
+  "licence.details": "Impacted licence",
+  "licence.record": "Impacted licence record",
+  "licence.num": "Licence Number",
+  "dossier.id": "Dossier ID",
+  "is.change": "Is there a change to the regulatory correspondent's name and/or address",
+  "yes": "Yes",
+  "no": "No",
+  "new.company.id": "New Company ID",
+  "new.contact.id": "New Contact ID",
+  "new.contact.name": "New Contact's name",
   "save.working.copy": "Save Working Copy",
   "save.draft": "Save Draft for Filing",
   "approve.final": "Approve Final XML",
@@ -90,5 +119,9 @@
   "msg.err.file.load": "There was a problem loading the file.",
   "msg.err.file.type": "An invalid file type was selected.",
   "msg.err.form.type": "The wrong form type was selected for this form.",
-  "msg.err.checksum.fail": "The checksum in the file does not match the calculated checksum"
+  "msg.err.checksum.fail": "The checksum in the file does not match the calculated checksum",
+  "error.found.because":"could not be saved because",
+  "instruction": "instruction",
+  "instruction.help": "Instructions for completing sections on form",
+  "return.instruction": "Return to instruction"
 }
