--- a/mds/company/en/assets/i18n/company/fr.json
+++ b/mds/company/en/assets/i18n/company/fr.json
@@ -24,6 +24,8 @@
   "error.msg.email": "fr_Please specify a valid email address",
   "error.msg.postal": "fr_Please specify a valid postal code.",
   "error.mgs.zip": "fr_Please specify a valid zip code.",
+  "error.mgs.company.id": "fr_Please specify a valid company ID.",
+  "error.mgs.licence.number": "fr_Please specify a valid licence number.",
   "postal.canada": "fr_Postal Code",
   "postal.usa": "fr_Zip Code",
   "heading.company": "fr_Regulatory Company Enrolment",
@@ -46,7 +48,8 @@
   "salut.ms": "fr_Ms.",
   "salut.dr": "fr_Dr.",
   "salut.mrs": "fr_Mrs.",
-  "status": "fr_Status",
+  "status": "fr_Contact Status",
+  "hcStatus": "fr_HC Contact Status",
   "role.primary": "fr_Primary",
   "role.secondary": "fr_Alternate",
   "contact.email": "fr_Email",
@@ -79,7 +82,32 @@
   "date.saved": "fr_Date Last Saved",
   "amend.enrol": "fr_Amend Enrolment",
   "amend.msg": "fr_Edit records to be amended below.",
-  "reason.amend": "fr_Reason for amendment",
+  "amend.reason": "fr_Reason for amendment",
+  "manuname.change": "fr_Change in manufacturer's name",
+  "manuaddr.change": "fr_Change in manufacturer's address",
+  "facility.change": "fr_Change only to the name and/or address of the manufacturing facility",
+  "other": "fr_Other",
+  "other": "fr_Other Details",
+  "ownership.transferred": "fr_Are any ownership of licenses being transferred?",
+  "admin.changes": "fr_Company Administrative Changes",
+  "manufacturer.name.listed": "fr_The revised manufacturer's name should be listed in the \"company name\" field in address information section above",
+  "manufacturer.address.listed": "fr_The revised manufacturer's address should be listed in the fields in address information section above",
+  "include.attestation": "fr_Please include a signed attestation for manufacturing facility name/address change",
+  "impacted.licence": "fr_Impacted licence(s)",
+  "all.licence.num": "fr_All licence number",
+  "all.dossier.id": "fr_All dossier ID",
+  "add.licence": "fr_Add licence",
+  "save.licence": "Save licence",
+  "delete.licence": "Delete licence",
+  "licence.num": "fr_Licence number",
+  "dossier.id": "fr_Dossier ID",
+  "delete.licence": "fr_Delete licence",
+  "is.change": "fr_Is there a change to the regulatory correspondent's name and/or address",
+  "yes": "fr_Yes",
+  "no": "fr_No",
+  "new.company.id": "fr_New company ID",
+  "new.contact.id": "fr_New contact ID",
+  "new.contact.name": "fr_New contact's name",
   "save.working.copy": "fr_Save Working Copy",
   "save.draft": "fr_Save Draft for Filing",
   "approve.final": "fr_Approve Final XML",
@@ -90,5 +118,8 @@
   "msg.err.file.load": "fr_There was a problem loading the file.",
   "msg.err.file.type": "fr_An invalid file type was selected.",
   "msg.err.form.type": "fr_The wrong form type was selected for this form.",
-  "msg.err.checksum.fail": "fr_The checksum in the file does not match the calculated checksum"
+  "msg.err.checksum.fail": "fr_The checksum in the file does not match the calculated checksum",
+  "instruction": "fr_instruction",
+  "instruction.help": "fr_Instructions for completing sections on form",
+  "return.instruction": "fr_Return to instruction"
 }
