--- a/mds/transaction/en/assets/i18n/transaction/en.json
+++ b/mds/transaction/en/assets/i18n/transaction/en.json
@@ -4,8 +4,8 @@
   "transaction.enrolment": "Regulatory Transaction Enrolment",
   "dossier.id": "Dossier ID",
   "dossier.type": "Dossier Type",
-  "manufacturing.company.id": "Manufacturing Company ID",
-  "manufacturing.contact.id": "Manufacturing Contact ID",
+  "manufacturing.company.id": "Manufacturer Company ID",
+  "manufacturing.contact.id": "Manufacturer Contact ID",
   "regulatory.company.id": "Regulatory Company ID",
   "regulatory.contact.id": "Regulatory Contact ID",
 	"activity.lead": "Activity Lead",
@@ -21,7 +21,7 @@
   "meeting.id": "Meeting ID",
   "device.name": "Name of Device, as it appears on the label",
   "licence.name": "Proposed licence name",
-  "include.ddt": "Include device details table in transaction specifying the proposed device names compared to the original device namesr",
+  "include.ddt": "Include device details table in transaction specifying the proposed device names compared to the original device names",
   "request.date": "Date of Request (MM/DD/YYYY)",
   "brief.descr": "Brief Description",
   "has.ddt": "Device details table included?",
@@ -93,6 +93,7 @@
   "commmon.required.bracket": "(required)",
   "common.saveRevert": "Please save or revert the record",
   "errorSummary.transaction": "Transaction Form",
+  "error.found.because":"could not be saved because",
   "error.found.plural": "errors were found",
   "error.found.singular": "error was found",
   "appl.status": "Enrolment Status",
@@ -100,6 +101,11 @@
   "date.saved": "Date Last Saved",
   "yes": "Yes",
   "no": "No",
+  "minNumber5": "(5 numbers)",
+  "minNumber6": "(6 numbers)",
+  "minNumber8": "(8 numbers)",
+  "minAlphanumeric5": "(5 characters)",
+  "minAlphanumeric7": "(1 letter and 6 numbers)",
   "reason.amend": "Reason for amendment",
   "save.working.copy": "Save Working Copy",
   "generate.final": "Generate Final XML",
