--- a/mds/transaction/en/assets/i18n/transaction/fr.json
+++ b/mds/transaction/en/assets/i18n/transaction/fr.json
@@ -4,8 +4,8 @@
   "transaction.enrolment": "fr_Regulatory Transaction Enrolment",
   "dossier.id": "fr_Dossier ID",
   "dossier.type": "fr_Dossier Type",
-  "manufacturing.company.id": "fr_Manufacturing Company ID",
-  "manufacturing.contact.id": "fr_Manufacturing Contact ID",
+  "manufacturing.company.id": "fr_Manufacturer Company ID",
+  "manufacturing.contact.id": "fr_Manufacturer Contact ID",
   "regulatory.company.id": "fr_Regulatory Company ID",
   "regulatory.contact.id": "fr_Regulatory Contact ID",
   "activity.lead": "fr_Activity Lead",
@@ -21,7 +21,7 @@
   "meeting.id": "fr_Meeting ID",
   "device.name": "fr_Name of Device, as it appears on the label",
   "licence.name": "fr_Proposed licence name",
-  "include.ddt": "fr_Include device details table in transaction specifying the proposed device names compared to the original device namesr",
+  "include.ddt": "fr_Include device details table in transaction specifying the proposed device names compared to the original device names",
   "request.date": "fr_Date of Request (MM/DD/YYYY)",
   "brief.descr": "fr_Brief Description",
   "has.ddt": "fr_Device details table included?",
