--- a/mds/internal/dossier/en/assets/i18n/dossier/en.json
+++ b/mds/internal/dossier/en/assets/i18n/dossier/en.json
@@ -15,6 +15,8 @@
   "required": "This field is required",
   "minlength": "Minimum length 10",
   "minNumber5": "(5 numbers)",
+  "minNumber6": "(6 numbers)",
+  "minNumber8": "(8 numbers)",
   "minAlphanumeric5": "(5 characters)",
   "minAlphanumeric7": "(1 letter and 6 numbers)",
   "error.msg.phone": "Please specify a valid phone number",
@@ -28,7 +30,7 @@
   "device.name": "Name of device, as it appears on the label",
   "has.qmsc": "Quality Management System Certificate (QMSC) is available",
   "qmsc.registrar": "Quality Management System Certificate (QMSC) registrar",
-  "qmsc.no":"Quality Management System Certificate (QMSC) must be issued by CMDCAS recognized/certified",
+  "qmsc.no":"Must be issued by Canadian Medical Devices Conformity Assessment System (CMDCAS) recognized/certified",
   "licence.app.type": "Licence Application Type",
   "add.field": "Additional field for context",
   "commmon.required.bracket": "(required)",
@@ -39,8 +41,8 @@
   "enrol.version": "Enrolment Version",
   "date.saved": "Date Last Saved",
   "save.working.copy": "Save Working Copy",
-  "save.draft": "Save Draft for Filing",
-  "approve.final": "Approve Final XML",
+  "save.draft": "Save Draft XML",
+  "approve.final": "Generate Final XML",
   "yes": "Yes",
   "no": "No",
   "DC2": "Class II",
