MD CO form release to DEV - v1.0.1

--- a/mds/company/en/assets/i18n/company/fr.json
+++ b/mds/company/en/assets/i18n/company/fr.json
@@ -16,8 +16,8 @@
   "fileio.msg.parseFail": "fr_Parsing of the file has failed",
   "fileio.msg.fileTypeError": "fr_File Type Error",
   "fileio.msg.dataTypeError": "fr_Error: the wrong form data was selected for this form.",
-  "addressRecord.save": "fr_Save Address",
-  "addressRecord.delete": "fr_Delete Address",
+  "save.record": "fr_Save Record",
+  "delete.record": "fr_Delete Record",
   "required": "fr_This field is required",
   "minlength": "fr_Minimum length 10",
   "error.msg.phone": "fr_Please specify a valid phone number",
@@ -26,6 +26,7 @@
   "error.mgs.zip": "fr_Please specify a valid zip code.",
   "error.mgs.company.id": "fr_Please specify a valid company ID.",
   "error.mgs.licence.number": "fr_Please specify a valid licence number.",
+  "error.mgs.contact.id": "fr_Please specify a valid contact ID.",
   "postal.canada": "fr_Postal Code",
   "postal.usa": "fr_Zip Code",
   "heading.company": "fr_Regulatory Company Enrolment",
@@ -94,7 +95,7 @@
   "manufacturer.address.listed": "fr_The revised manufacturer's address should be listed in the fields in address information section above",
   "include.attestation": "fr_Please include a signed attestation for manufacturing facility name/address change",
   "impacted.licence": "fr_Impacted licence(s)",
-  "all.licence.num": "fr_All licence number",
+  "all.licence.num": "fr_All Impacted Licence Number(s)",
   "all.dossier.id": "fr_All dossier ID",
   "add.licence": "fr_Add licence",
   "save.licence": "Save licence",
@@ -103,6 +104,11 @@
   "dossier.id": "fr_Dossier ID",
   "delete.licence": "fr_Delete licence",
   "is.change": "fr_Is there a change to the regulatory correspondent's name and/or address",
+  "primary.contact": "fr_Primary REP contact",
+  "is.3rd.party": "fr_Is this enrolment completed by a third party?",
+  "company.id.contact": "fr_Company ID for REP Contact",
+  "contact.id.contact": "fr_Contact ID for REP Contact",
+  "contact.name": "fr_REP Contact's Name",
   "yes": "fr_Yes",
   "no": "fr_No",
   "new.company.id": "fr_New company ID",
@@ -121,5 +127,6 @@
   "msg.err.checksum.fail": "fr_The checksum in the file does not match the calculated checksum",
   "instruction": "fr_instruction",
   "instruction.help": "fr_Instructions for completing sections on form",
-  "return.instruction": "fr_Return to instruction"
+  "return.instruction": "fr_Return to instruction",
+  "include.page1": "fr_Please include the page 1 of each impacted licence, a valid Quality Management System Certificate (QMSC) that reflects the change in manufacturer name or address, a completed F202 form, signed attestation as applicable."
 }
