md AI v1.0.2 and bug fix CO, deploy to DEV

--- a/mds/applicationInfo/en/assets/i18n/applicationInfo/en.json
+++ b/mds/applicationInfo/en/assets/i18n/applicationInfo/en.json
@@ -38,7 +38,9 @@
   "heading.material": "Biological Material",
   "heading.material.record": "Biological Material Record",
   "device.name": "Name of Compatible Device",
-  "licence.number": "Licence number",
+  "licence.number": "Licence Number",
+  "application.number": "Application Number",
+  "licence.application.number": "Licence Number or Application Number",
   "material.name": "Name of Material",
   "device.label.name": "Name of Device (as it appears on the label)",
   "species.family": "Family of Species",
@@ -103,7 +105,7 @@
   "minNumber6": "(6 numbers)",
   "minNumber5": "(5 numbers)",
   "minAlphanum5": "(5 characters)",
-  "minAlphanum7": "(1 letter and 6 numbers)",
+  "minAlphanum7": "(\"m\" and 6 numbers)",
   "instruction": "instruction",
   "instruction.help": "Instructions for completing sections on form",
   "return.instruction": "Return to instruction"
