--- a/mds/applicationInfo/en/assets/i18n/applicationInfo/fr.json
+++ b/mds/applicationInfo/en/assets/i18n/applicationInfo/fr.json
@@ -38,7 +38,9 @@
   "heading.material": "fr_Biological Material",
   "heading.material.record": "fr_Biological Material Record",
   "device.name": "fr_Name of Compatible Device",
-  "licence.number": "fr_Licence number",
+  "licence.number": "fr_Licence Number",
+  "application.number": "fr_Application Number",
+  "licence.application.number": "fr_Licence Number or Application Number",
   "material.name": "fr_Name of Material",
   "device.label.name": "fr_Name of Device (as it appears on the label)",
   "species.family": "fr_Family of Species",
@@ -98,6 +100,11 @@
   "msg.err.file.type": "fr_An invalid file type was selected.",
   "msg.err.form.type": "fr_The wrong form type was selected for this form.",
   "msg.err.checksum.fail": "fr_The checksum in the file does not match the calculated checksum",
+  "minNumber8": "fr_(8 numbers)",
+  "minNumber6": "fr_(6 numbers)",
+  "minNumber5": "fr_(5 numbers)",
+  "minAlphanum5": "fr_(5 characters)",
+  "minAlphanum7": "fr_(\"m\" and 6 numbers)",
   "instruction": "fr_instruction",
   "instruction.help": "fr_Instructions for completing sections on form",
   "return.instruction": "fr_Return to instruction"
