MDS RT form v1.0.1 deploy to DEV

--- a/mds/transaction/en/assets/i18n/transaction/en.json
+++ b/mds/transaction/en/assets/i18n/transaction/en.json
@@ -28,12 +28,13 @@
   "has.app.info": "Application information XML included in transaction?",
   "is.solicited": "Is this solicited information",
   "requester.title": "Requester of solicited information",
-  "add.requester": "Add requester",
-  "delete.requester": "Delete requester",
+  "add.requester": "Add requester record",
+  "delete.requester": "Delete record",
   "fees": "Fees",
   "are.fees": "Are new fees or revised fees associated with this transactions?",
   "billing.company.id": "Billing Company ID",
   "billing.contact.id": "Billing Contact ID",
+  "completed.fee.required":"A completed fee form is still required, however, the applicable fees will be invoiced.",
   "app.nature": "Nature of Application",
   "is.deferral": "A deferral of payment is requested with this transaction",
   "is.remission": "Fee Remission is requested with this transaction",
@@ -87,8 +88,8 @@
   "error.mgs.application.number": "Please specify a valid application number.",
   "heading.transaction": "Regulatory Transaction Information",
   "heading.requesters": "Transaction Requester Information",
-  "heading.requesterRecord": "Transaction Requester Record",
-  "heading.requesterDetail": "Transaction Requester Detail",
+  "heading.requester.record": "Transaction Requester Record",
+  "heading.requester.detail": "Transaction Requester Detail",
   "discard.changes": "Discard Changes",
   "commmon.required.bracket": "(required)",
   "common.saveRevert": "Please save or revert the record",
@@ -106,6 +107,7 @@
   "minNumber8": "(8 numbers)",
   "minAlphanumeric5": "(5 characters)",
   "minAlphanumeric7": "(1 letter and 6 numbers)",
+  "minAlphanum6.m": "(\"m\" and 6 numbers)",
   "reason.amend": "Reason for amendment",
   "save.working.copy": "Save Working Copy",
   "generate.final": "Generate Final XML",
