--- a/mds/transaction/en/assets/i18n/transaction/fr.json
+++ b/mds/transaction/en/assets/i18n/transaction/fr.json
@@ -28,12 +28,13 @@
   "has.app.info": "fr_Application information XML included in transaction?",
   "is.solicited": "fr_Is this solicited information",
   "requester.title": "fr_Requester of solicited information",
-  "add.requester": "fr_Add requester",
-  "delete.requester": "fr_Delete requester",
+  "add.requester": "fr_Add requester record",
+  "delete.requester": "fr_Delete record",
   "fees": "fr_Fees",
   "are.fees": "fr_Are new fees or revised fees associated with this transactions?",
   "billing.company.id": "fr_Billing Company ID",
   "billing.contact.id": "fr_Billing Contact ID",
+  "completed.fee.required":"fr_A completed fee form is still required, however, the applicable fees will be invoiced.",
   "app.nature": "fr_Nature of Application",
   "is.deferral": "fr_A deferral of payment is requested with this transaction",
   "is.remission": "fr_Fee Remission is requested with this transaction",
@@ -87,12 +88,13 @@
   "error.mgs.application.number": "fr_Please specify a valid application number.",
   "heading.transaction": "fr_Regulatory Transaction Information",
   "heading.requesters": "fr_Transaction Requester Information",
-  "heading.requesterRecord": "fr_Transaction Requester Record",
-  "heading.requesterDetail": "fr_Transaction Requester Detail",
+  "heading.requester.record": "fr_Transaction Requester Record",
+  "heading.requester.detail": "fr_Transaction Requester Detail",
   "discard.changes": "fr_Discard Changes",
   "commmon.required.bracket": "fr_(required)",
   "common.saveRevert": "fr_Please save or revert the record",
   "errorSummary.transaction": "fr_Transaction Form",
+  "error.found.because":"fr_could not be saved because",
   "error.found.plural": "fr_errors were found",
   "error.found.singular": "fr_error was found",
   "appl.status": "fr_Enrolment Status",
@@ -100,6 +102,12 @@
   "date.saved": "fr_Date Last Saved",
   "yes": "fr_Yes",
   "no": "fr_No",
+  "minNumber5": "fr_(5 numbers)",
+  "minNumber6": "fr_(6 numbers)",
+  "minNumber8": "fr_(8 numbers)",
+  "minAlphanumeric5": "fr_(5 characters)",
+  "minAlphanumeric7": "fr_(1 letter and 6 numbers)",
+  "minAlphanum6.m": "fr_(\"m\" and 6 numbers)",
   "reason.amend": "fr_Reason for amendment",
   "save.working.copy": "fr_Save Working Copy",
   "generate.final": "fr_Generate Final XML",
