MD forms - deploy co form v1.0.1 to Pilot Prod internal

--- a/mds/internal/company/en/assets/i18n/company/en.json
+++ b/mds/internal/company/en/assets/i18n/company/en.json
@@ -16,16 +16,20 @@
 	"fileio.msg.parseFail": "Parsing of the file has failed",
 	"fileio.msg.fileTypeError": "File Type Error",
 	"fileio.msg.dataTypeError": "Error: the wrong form data was selected for this form.",
-	"addressRecord.save": "Save Address",
-	"addressRecord.delete": "Delete Address",
+	"save.record": "Save Record",
+	"delete.record": "Delete Record",
   "required": "This field is required",
   "minlength": "Minimum length 10",
   "error.msg.phone": "Please specify a valid phone number",
+  "error.msg.fax": "Please specify a valid fax number",
   "error.msg.email": "Please specify a valid email address",
   "error.msg.postal": "Please specify a valid postal code.",
   "error.mgs.zip": "Please specify a valid zip code.",
   "error.mgs.company.id": "Please specify a valid company ID.",
   "error.mgs.licence.number": "Please specify a valid licence number.",
+  "error.mgs.primary.contact.id": "Please specify a valid contact ID for REP contact.",
+  "error.mgs.primary.company.id": "Please specify a valid company ID for REP contact.",
+  "error.mgs.contact.id": "Please specify a valid contact ID.",
   "postal.canada": "Postal Code",
   "postal.usa": "Zip Code",
   "heading.company": "Regulatory Company Enrolment",
@@ -94,7 +98,7 @@
   "manufacturer.address.listed": "The revised manufacturer's address should be listed in the fields in address information section above",
   "include.attestation": "Please include a signed attestation for manufacturing facility name/address change",
   "impacted.licence": "Impacted Licence(s)",
-  "all.licence.num": "All licence number",
+  "all.licence.num": "All Impacted Licence Number(s)",
   "all.dossier.id": "All dossier ID",
   "add.licence": "Add Licence",
   "save.licence": "Save Licence",
@@ -104,6 +108,11 @@
   "licence.num": "Licence Number",
   "dossier.id": "Dossier ID",
   "is.change": "Is there a change to the regulatory correspondent's name and/or address",
+  "primary.contact": "Primary REP contact",
+  "is.3rd.party": "Is this enrolment completed by a third party?",
+  "company.id.contact": "Company ID for REP Contact",
+  "contact.id.contact": "Contact ID for REP Contact",
+  "contact.name": "REP Contact's Name",
   "yes": "Yes",
   "no": "No",
   "new.company.id": "New Company ID",
@@ -128,5 +137,6 @@
   "error.found.because":"could not be saved because",
   "instruction": "instruction",
   "instruction.help": "Instructions for completing sections on form",
-  "return.instruction": "Return to instruction"
+  "return.instruction": "Return to instruction",
+  "include.page1": "Please include the page 1 of each impacted licence, a valid Quality Management System Certificate (QMSC) that reflects the change in manufacturer name or address, a completed F202 form, signed attestation as applicable."
 }
