--- a/mds/applicationInfo/en/assets/i18n/applicationInfo/fr.json
+++ b/mds/applicationInfo/en/assets/i18n/applicationInfo/fr.json
@@ -3,7 +3,7 @@
   "application-info.load.file": "fr_Load a Application Information Enrolment File",
   "application-info.enrolment": "fr_Regulatory Application Information Enrolment",
   "heading.app-info": "fr_Application Information",
-  "company.id": "fr_Company ID",
+  "company.id": "fr_Manufacturer Company ID",
   "dossier.id": "fr_Dossier ID",
   "qmsc.number": "fr_Quality Management System Certificate Number",
   "heading.devices": "fr_Compatibility of interdependent devices",
@@ -20,12 +20,12 @@
   "fileio.msg.parseFail": "fr_Parsing of the file has failed",
   "fileio.msg.fileTypeError": "fr_File Type Error",
   "fileio.msg.dataTypeError": "fr_Error: the wrong form data was selected for this form.",
-  "add.device": "fr_Add Device",
-  "save.device": "fr_Save Device",
-  "delete.device": "fr_Delete Device",
-  "add.material": "fr_Add Biological Material",
-  "save.material": "fr_Save Material",
-  "delete.material": "fr_Delete Material",
+  "add.device": "fr_Add Device Record",
+  "save.device": "fr_Save Record",
+  "delete.device": "fr_Delete Record",
+  "add.material": "fr_Add Biological Material Record",
+  "save.material": "fr_Save Record",
+  "delete.material": "fr_Delete Record",
   "discard.changes": "fr_Discard Changes",
   "required": "fr_This field is required",
   "heading.application-info": "fr_Regulatory Application Information Enrolment",
@@ -38,7 +38,9 @@
   "heading.material": "fr_Biological Material",
   "heading.material.record": "fr_Biological Material Record",
   "device.name": "fr_Name of Compatible Device",
-  "licence.number": "fr_Licence number",
+  "licence.number": "fr_Licence Number",
+  "application.number": "fr_Application Number",
+  "licence.application.number": "fr_Licence Number or Application Number",
   "material.name": "fr_Name of Material",
   "device.label.name": "fr_Name of Device (as it appears on the label)",
   "species.family": "fr_Family of Species",
@@ -62,8 +64,8 @@
   "provision.mdr": "fr_Has this device been previously authorized for sale in Canada under the following provisions of the Medical Devices Regulations: ",
   "mdr.it": "fr_Investigational Testing",
   "mdr.sa": "fr_Special Access",
-  "authorization.number": "fr_Authorization Number",
-  "device.id": "fr_The device identification number",
+  "application.number": "fr_Application Number",
+  "sap.req.number": "fr_SAP Request Number",
   "standards.list": "fr_List of Recognized Standards Complied with in the manufacture of the Device",
   "conformity.declaration": "fr_Declaration of Conformity form (available on the Health Canada website) confirms that the medical device(s) comply with Recognized Standards or equivalent or better standards",
   "declaration.instruct": "fr_Health Canada can not process your medical Device Licence Application without the \"Declaration of Conformity\"",
@@ -71,12 +73,16 @@
   "commmon.required.bracket": "fr_(required)",
   "consist.recombinant": "fr_Does this device consist of recombinant material?",
   "contain.material": "fr_Does this device contain, or is it produced using, any animal or human sourced material?",
-  "is.same.material": "fr_Is the Biological Material the same for All Devices Listed in \"Identifier of Devices - DEHP/BPA\" Table?",
+  "is.same.material": "fr_Is the Biological Material the same for All Devices Listed in the Device Details Table?",
   "yes": "fr_Yes",
   "no": "fr_No",
   "minlength": "fr_Minimum length 10",
   "error.mgs.company.id": "fr_Please specify a valid company ID.",
   "error.mgs.dossier.id": "fr_Please specify a valid dossier ID.",
+  "error.mgs.din": "fr_Please specify a valid Drug Identification Number (DIN).",
+  "error.mgs.npn": "fr_Please specify a valid Natural Product Number (NPN).",
+  "error.mgs.licence.number": "fr_Please specify a valid Licence Number.",
+  "error.mgs.application.number": "fr_Please specify a valid application number.",
   "errorSummary.application-info": "fr_Application Information Form",
   "error.found.plural": "fr_errors were found",
   "error.found.singular": "fr_error was found",
@@ -94,6 +100,11 @@
   "msg.err.file.type": "fr_An invalid file type was selected.",
   "msg.err.form.type": "fr_The wrong form type was selected for this form.",
   "msg.err.checksum.fail": "fr_The checksum in the file does not match the calculated checksum",
+  "minNumber8": "fr_(8 numbers)",
+  "minNumber6": "fr_(6 numbers)",
+  "minNumber5": "fr_(5 numbers)",
+  "minAlphanum5": "fr_(5 characters)",
+  "minAlphanum7": "fr_(\"m\" and 6 numbers)",
   "instruction": "fr_instruction",
   "instruction.help": "fr_Instructions for completing sections on form",
   "return.instruction": "fr_Return to instruction"
