--- a/mds/internal/company/en/assets/i18n/company/en.json
+++ b/mds/internal/company/en/assets/i18n/company/en.json
@@ -16,7 +16,7 @@
   "fileio.msg.parseFail": "Parsing of the file has failed",
   "fileio.msg.fileTypeError": "File Type Error",
   "fileio.msg.dataTypeError": "Error: the wrong form data was selected for this form.",
-  "save.record": "Save Record",
+  "save.record": "Add Record",
   "delete.record": "Delete Record",
   "required": "This field is required",
   "minlength": "Minimum length 10",
@@ -30,7 +30,7 @@
   "error.mgs.primary.contact.id": "Please specify a valid contact Identifier for REP Contact.",
   "error.mgs.primary.company.id": "Please specify a valid company Identifier for REP Contact.",
   "error.mgs.contact.id": "Please specify a valid contact identifier.",
-  "error.msg.contact.one.record": "At least one company representative should be entered ",
+  "error.msg.contact.one.record": "At least one company representative must be entered ",
   "postal.canada": "Postal Code",
   "postal.usa": "Zip Code",
   "heading.company": "Regulatory Company Enrolment",
@@ -38,7 +38,7 @@
   "heading.addressDetails": "Address Details",
   "heading.addressRecord": "Address Record",
   "add.address": "Add Address",
-  "company.name.full": "Company Name (Full legal name - no abbreviations)",
+  "company.name.full": "Company Name",
   "heading.contactInfo": "Company Representative Information",
   "heading.contactRecord": "Company Representative Record",
   "heading.contactDetails": "Company Representative Detail",
@@ -161,6 +161,7 @@
   "help.status.02": "A revision to an exisiting contact should be identified with “revise” status.",
   "help.status.03": "A deactivation of an existing contact should be identified with “delete” status.",
   "help.routing.id.01": "The routing identifier is a unique identifier within the Electronic Submissions Gateway (ESG) for each account, used to identify the specific gateway account, whether it uses the Applicability Statement 2 (AS2) or WebTrader interfaces.",
+  "help.routing.id.01a": "Health Canada plans to use the routing identifier in the near future to send documents back to companies using the ESG. Companies will be notified before Health Canada begins implementing this new process. In the meantime, this field is optional, and the input routing identifier will only be stored in our internal databases for now.",
   "help.routing.id.02": "For the WebTrader users, the routing identifier is automatically assigned to each account by the system. It can be retrieved from any message disposition notification receipt, under attribute: “X-Cyclone-To:”",
   "help.routing.id.03": "For AS2 users, the routing identifier has to be created by the company. It is recommended that the company's data universal numbering system number be used for this, but any alpha-numeric text string is acceptable.",
   "help.routing.id.04": "For any further questions on the routing identifier, please contact the Food and Drug Administration Help Desk at ",
