--- a/mds/internal/company/en/assets/i18n/company/fr.json
+++ b/mds/internal/company/en/assets/i18n/company/fr.json
@@ -16,6 +16,7 @@
   "fileio.msg.parseFail": "fr_Parsing of the file has failed",
   "fileio.msg.fileTypeError": "fr_File Type Error",
   "fileio.msg.dataTypeError": "fr_Error: the wrong form data was selected for this form.",
+  "amend.note": "fr_The “Amend Enrolment” button must be selected when amending a Final Company XML.",
   "save.record": "fr_Add Record",
   "delete.record": "fr_Delete Record",
   "save.contact": "fr_Save Contact",
@@ -47,6 +48,7 @@
   "heading.contactRecord": "fr_Company Representative Record",
   "heading.contactDetails": "fr_Company Representative Detail",
   "contact.id": "fr_Contact Identifier",
+  "full.name": "fr_Full Name",
   "first.name": "fr_First Name",
   "last.name": "fr_Last Name",
   "initials": "fr_Initials",
@@ -98,6 +100,7 @@
   "manuname.change": "fr_Change in manufacturer's name",
   "manuaddr.change": "fr_Change in manufacturer's address",
   "facility.change": "fr_Change only to the name and/or address of the manufacturing facility",
+  "contact.change": "fr_Changes to company representative information section",
   "other": "fr_Other",
   "other": "fr_Other Details",
   "ownership.transferred": "fr_Are any ownership of licenses being transferred?",
@@ -152,19 +155,21 @@
   "help.load.file.01": "fr_A file should not be loaded if this is the first time enrolling the Company.",
   "help.load.file.02": "fr_When continuing with a working copy, the format of the file to load should be (.hcsc).",
   "help.load.file.03": "fr_When viewing/updating a draft or final XML file, the format of the file to load should be (.xml).",
+  "help.load.file.04": "fr_Refresh template prior to loading file. Always load file into blank template.",
   "help.heading.01": "fr_The “Enrolment Status”, “Enrolment Version”, and “Date Last Saved” fields are automatically filled by the form upon selecting “Save Working Copy” or “Save Draft XML” in the bottom of the template.",
   "help.heading.02": "fr_The “Company Identifier” field will be filled by Health Canada when they generate the final company XML file.",
   "help.heading.03": "fr_The “Amend Enrolment” button is only enabled when a final company xml file is loaded into the template, and must be selected when amending a final company XML file.",
   "help.business.num.01": "fr_A business number is a unique, 9-digit number (i.e., the standard identifier for businesses). It is unique to a business or legal entity. Information on the business number can be found on the ",
   "help.business.num.02": "fr_https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/you-need-a-business-number-a-program-account.html",
   "help.business.num.03": "fr_Government of Canada website",
-  "help.status.01": "fr_A new contact should be identified with “new” status.",
-  "help.status.02": "fr_A revision to an exisiting contact should be identified with “revise” status.",
-  "help.status.03": "fr_A deactivation of an existing contact should be identified with “delete” status.",
+  "help.status.01": "fr_New - To add a  new contact.",
+  "help.status.02": "fr_Revise - To request a revision to an active contact.",
+  "help.status.03": "fr_Remove - To request the deactivation of an active contact.",
+  "help.status.04": "fr_Active - Active contact for the company",
+  "help.des.renewal": "fr_The party that should be contacted/notified annually for license renewal.",
+  "help.des.finance": "fr_The party that should be contacted for any questions or issues related to fees.",
   "help.routing.id.01": "fr_The routing identifier is a unique identifier within the Electronic Submissions Gateway (ESG) for each account, used to identify the specific gateway account, whether it uses the Applicability Statement 2 (AS2) or WebTrader interfaces.",
   "help.routing.id.01a": "fr_Health Canada plans to use the routing identifier in the near future to send documents back to companies using the ESG. Companies will be notified before Health Canada begins implementing this new process. In the meantime, this field is optional, and the input routing identifier will only be stored in our internal databases for now.",
-  "help.routing.id.02": "fr_For the WebTrader users, the routing identifier is automatically assigned to each account by the system. It can be retrieved from any message disposition notification receipt, under attribute: “X-Cyclone-To:”",
-  "help.routing.id.03": "fr_For AS2 users, the routing identifier has to be created by the company. It is recommended that the company's data universal numbering system number be used for this, but any alpha-numeric text string is acceptable.",
   "help.routing.id.04": "fr_For any further questions on the routing identifier, please contact the Food and Drug Administration Help Desk at ",
   "help.primary.contact": "fr_The Primary REP contact is the person to be contacted by Health Canada if there are any issues or clarifications required for this template when it is submitted for finalization.",
   "help.is.3rd.party": "fr_Third party companies must obtain their Company Identifier and Contact Identifiers (by enrolling themselves using the REP Company template) prior to enrolling another company on their behalf.",
@@ -173,9 +178,12 @@
   "mailto.01": "fr_The draft CO XML must be sent via email.",
   "mailto.02": "fr_By clicking this button, a templated email message should be auto-created using the your default email program. Before submitting, please attach your draft CO XML file.",
   "mailto.03": "fr_If an email was not automatically created, you can create an email and include the following:",
-  "mailto.04": "fr_To: MD licensing (hc.devicelicensing-homologationinstruments.sc@canada.ca)",
-  "mailto.04a": "fr_To: Quality Systems (hc.qs.mdb.sc@canada.ca)",
+  "mailto.04": "fr_To: MD licensing (devicelicensing-homologationinstruments@hc-sc.gc.ca)",
+  "mailto.04a": "fr_To: Quality Systems (qs.mdb@hc-sc.gc.ca)",
   "mailto.05": "fr_Subject: Draft CO XML",
   "mailto.06": "fr_Body: The attached file is the draft CO XML",
-  "mailto.07": "fr_Attachment: The draft CO XML."
+  "mailto.07": "fr_Attachment: The draft CO XML.",
+  "contact.designation": "fr_Company contact designation (for manufacturer only)",
+  "des.renewal": "fr_Designated renewal contact (for manufacturer only)",
+  "des.finance": "fr_Designated finance contact (for manufacturer only)"
 }
